package com.karaoke.backend.domain;

public enum InvoiceStatus {
    DRAFT,
    PAID,
    CANCELLED
}
